# cpp-template

./: .clang-tidy  CMakeLists.txt  Makefile  README.md
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake
src/advent_of_code/: README.md
src/advent_of_code/2015/day01/: day01.cpp  day01.hpp  main.cpp
src/advent_of_code/2015/day02/: day02.cpp  day02.hpp  main.cpp
test/: CMakeLists.txt
test/advent_of_code/2015/: day01_test.cpp  day02_test.cpp
